<resources>
    <string name="app_name">OmikronOmikron</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Αρχική</string>
    <string name="menu_login">Σύνδεση</string>
    <string name="menu_categories">Κατηγορίες</string>
    <string name="menu_orders">Παραγγελίες</string>
    <string name="menu_wishes">Αγαπημένα</string>
    <string name="menu_vendors">Φαρμακεία</string>
    <string name="menu_account">Πληροφορίες Προφίλ</string>
    <string name="menu_about">Σχετικά με εμάς</string>
    <string name="menu_contact">Επικοινωνία</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>