<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.omikronomikron.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.omikronomikron.ui.login.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/nav_categories"
        android:name="com.example.omikronomikron.ui.lists.CategoriesFragment"
        android:label="@string/menu_categories"
        tools:layout="@layout/fragment_categories" />

    <fragment
        android:id="@+id/nav_orders"
        android:name="com.example.omikronomikron.ui.lists.OrdersFragment"
        android:label="@string/menu_orders"
        tools:layout="@layout/fragment_orders" />

    <fragment
        android:id="@+id/nav_wishes"
        android:name="com.example.omikronomikron.ui.lists.WishesFragment"
        android:label="@string/menu_wishes"
        tools:layout="@layout/fragment_wishes" />

    <fragment
        android:id="@+id/nav_vendors"
        android:name="com.example.omikronomikron.ui.lists.VendorsFragment"
        android:label="@string/menu_vendors"
        tools:layout="@layout/fragment_vendors" />

    <fragment
        android:id="@+id/nav_account"
        android:name="com.example.omikronomikron.ui.informations.AccountInfoFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_account_info" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.omikronomikron.ui.informations.AboutUsFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about_us" />

    <fragment
        android:id="@+id/nav_contact"
        android:name="com.example.omikronomikron.ui.informations.ContactUsFragment"
        android:label="@string/menu_contact"
        tools:layout="@layout/fragment_contact_us" />
</navigation>